--- a/containers/shiva/S.H.I.V.A..conf
+++ b/containers/shiva/S.H.I.V.A..conf
@@ -1,5 +1,6 @@
 [/]
 tools.proxy.on: True
+tools.proxy.local: "Host"
 tools.sessions.on: True
 tools.sessions.storage_type: "memcached"
 tools.sessions.servers: ["memcached:11211"]
