Fixed haproxy check url. Splitted application into multiple files

--- a/containers/balancer/haproxy.cfg
+++ b/containers/balancer/haproxy.cfg
@@ -14,5 +14,5 @@ frontend http-in
 backend shiva
     option forwardfor
     option http-server-close
-    option httpchk GET /heartbeat
+    option httpchk GET /heartbeat/index
     server s1 shiva:8080 maxconn 32 check
