--- a/containers/balancer/haproxy.cfg
+++ b/containers/balancer/haproxy.cfg
@@ -12,6 +12,7 @@ frontend http-in
     default_backend shiva
 
 backend shiva
+    balance roundrobin
     option forwardfor
     option http-server-close
     option httpchk GET /heartbeat/index
