--- a/containers/balancer/haproxy.cfg
+++ b/containers/balancer/haproxy.cfg
@@ -16,4 +16,6 @@ backend shiva
     option forwardfor
     option http-server-close
     option httpchk GET /heartbeat/index
-    server s1 shiva:8080 maxconn 32 check
+    server s1 shiva1:8080 maxconn 32 check
+    server s2 shiva2:8080 maxconn 32 check
+    server s3 shiva3:8080 maxconn 32 check
