--- a/containers/balancer/haproxy.cfg
+++ b/containers/balancer/haproxy.cfg
@@ -3,9 +3,10 @@ global
 
 defaults
     mode http
-    timeout connect 5000ms
-    timeout client 50000ms
-    timeout server 50000ms
+    timeout check 1s
+    timeout connect 1s
+    timeout client 50s
+    timeout server 50s
 
 frontend http-in
     bind *:80
