--- a/containers/shiva/S.H.I.V.A..conf
+++ b/containers/shiva/S.H.I.V.A..conf
@@ -5,8 +5,8 @@ server.socket_host: "0.0.0.0"
 tools.proxy.on: True
 tools.proxy.local: "Host"
 tools.sessions.on: True
-tools.sessions.storage_type: "memcached"
-tools.sessions.servers: ["memcached:11211"]
+tools.sessions.storage_type: "hazelcast"
+tools.sessions.servers: ["hazelcast1:5701", "hazelcast2:5701", "hazelcast3:5701"]
 tools.sessions.timeout = 60
 #tools.sessions.secure: True
 tools.sessions.httponly: True
